# chatmulate

./: .env  .gitignore  README.md  pyproject.toml
chatmulate/: app.py
chatmulate/api/: chat.py
chatmulate/ui/: lang.py  main.py
chatmulate/utils/: env_loader.py
tests/ui/: lang_test.py
